Permission level and production config db
